--- a/.github/workflows/main_dev-iac-front-app01.yml
+++ b/.github/workflows/main_dev-iac-front-app01.yml
@@ -28,6 +28,21 @@ jobs:
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
+      - name: dotnet publish
+        run: dotnet tool install -g dotnet-ef
+      
+      - name: dotnet publish
+        run: dotnet ef migrations add InitialCreate
+
+      - name: dotnet publish
+        run: dotnet ef database update
+
+      - name: Apply EF Core Migrations
+        run: dotnet ef database update --project DotNetCoreSqlDb/DotNetCoreSqlDb.csproj
+
+      - name: dotnet publish
+        run: dotnet ef migrations bundle --runtime win-x64 -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
