--- a/.github/workflows/main_dev-iac-front-app01.yml
+++ b/.github/workflows/main_dev-iac-front-app01.yml
@@ -32,7 +32,7 @@ jobs:
         run: dotnet tool install -g dotnet-ef
       
       - name: dotnet publish
-        run: dotnet ef migrations add InitialCreate --project DotNetCoreSqlDb/DotNetCoreSqlDb.csproj
+        run: dotnet ef migrations add CreateMigrations --project DotNetCoreSqlDb/DotNetCoreSqlDb.csproj
 
       - name: dotnet publish
         run: dotnet ef database update
